<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_adicionar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context="io.github.freuvim.financecontrol.activitys.DadosActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical"
        android:paddingEnd="16dp"
        android:paddingStart="16dp"
        android:paddingTop="30dp"
        tools:ignore="UselessParent">

        <TextView
            android:id="@+id/displayValor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/display_value"
            android:textSize="20sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />


        <ru.kolotnev.formattedittext.CurrencyEditText
            android:id="@+id/valor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:maxLength="11"
            android:text="@string/value_hint"
            app:currency="BRL"
            app:locale="pt_br" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="50dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/displayTipo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/display_type"
                android:textSize="20sp" />

            <Space
                android:layout_width="50dp"
                android:layout_height="match_parent" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:spinnerMode="dialog" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="50dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/displayData"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/display_date"
                android:textSize="20sp" />

            <Space
                android:layout_width="20dp"
                android:layout_height="match_parent" />

            <EditText
                android:id="@+id/txtdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:focusableInTouchMode="false"
                android:hint="@string/dateHint"
                android:inputType="none" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="50dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|bottom"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btSalvar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/save"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btExcluir"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/delete"
                android:visibility="gone"
                tools:ignore="ButtonStyle" />

        </LinearLayout>

    </LinearLayout>
</RelativeLayout>
