<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="io.github.freuvim.financecontrol.fragments.RelatoriosFragment">

    <TextView
        android:id="@+id/listaRelatorios_vazia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/listaGastos_vazia"
        android:textSize="30sp"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/graphLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:orientation="horizontal">

            <TableLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingEnd="5dp"
                android:paddingStart="5dp">

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/cor1"
                        android:layout_width="10dp"
                        android:layout_height="10dp"
                        android:layout_gravity="center_vertical"
                        android:src="@color/cor1"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:id="@+id/tipo1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:paddingStart="5dp"
                        android:text="@string/clothing"
                        tools:ignore="RtlSymmetry" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingTop="5dp">

                    <ImageView
                        android:id="@+id/cor2"
                        android:layout_width="10dp"
                        android:layout_height="10dp"
                        android:layout_gravity="center_vertical"
                        android:src="@color/cor2"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:id="@+id/tipo2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:paddingStart="5dp"
                        android:text="@string/vehicles"
                        tools:ignore="RtlSymmetry" />
                </TableRow>

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="5dp">

                    <ImageView
                        android:id="@+id/cor3"
                        android:layout_width="10dp"
                        android:layout_height="10dp"
                        android:layout_gravity="center_vertical"
                        android:src="@color/cor3"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:id="@+id/tipo3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:paddingStart="5dp"
                        android:text="@string/various"
                        tools:ignore="RtlSymmetry" />
                </TableRow>

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="5dp">

                    <ImageView
                        android:id="@+id/cor4"
                        android:layout_width="10dp"
                        android:layout_height="10dp"
                        android:layout_gravity="center_vertical"
                        android:src="@color/cor4"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:id="@+id/tipo4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:paddingStart="5dp"
                        android:text="@string/feeding"
                        tools:ignore="RtlSymmetry" />
                </TableRow>

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="5dp">

                    <ImageView
                        android:id="@+id/cor5"
                        android:layout_width="10dp"
                        android:layout_height="10dp"
                        android:layout_gravity="center_vertical"
                        android:src="@color/cor5"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:id="@+id/tipo5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:paddingStart="5dp"
                        android:text="@string/entertainment"
                        tools:ignore="RtlSymmetry" />
                </TableRow>

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="5dp">

                    <ImageView
                        android:id="@+id/cor6"
                        android:layout_width="10dp"
                        android:layout_height="10dp"
                        android:layout_gravity="center_vertical"
                        android:src="@color/cor6"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:id="@+id/tipo6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:paddingStart="5dp"
                        android:text="@string/international_purchases"
                        tools:ignore="RtlSymmetry" />
                </TableRow>

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="5dp">

                    <ImageView
                        android:id="@+id/cor7"
                        android:layout_width="10dp"
                        android:layout_height="10dp"
                        android:layout_gravity="center_vertical"
                        android:src="@color/cor7"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:id="@+id/tipo7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:paddingStart="5dp"
                        android:text="@string/tourism"
                        tools:ignore="RtlSymmetry" />
                </TableRow>
            </TableLayout>

            <io.github.freuvim.financecontrol.holograph.PieGraph
                android:id="@+id/graph"
                android:layout_width="wrap_content"
                android:layout_height="180dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <ListView
            android:id="@+id/listaTipos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false" />
    </LinearLayout>
</FrameLayout>
